# VirtualScreen

./: .env.example  .gitignore  README.md
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/routes/: app_config.py  audio.py  auth.py  capture.py  card_templates.py  dice.py  display.py  events.py  fast_slots.py  llm.py  (+13 more)
backend/app/core/: audio.py  auth.py  capture.py  card_templates.py  cards.py  config.py  database.py  dice.py  display.py  events.py  fast_slots.py  file_safety.py  index.py  links.py  llm.py  map.py  pages.py  paths.py  prep_health.py  scenarios.py  scripts.py  search.py  system_packs.py  table_snapshots.py  watcher.py  workspace.py  world_library.py  world_operations.py
backend/tests/: conftest.py  test_app_config_routes.py  test_audio_routes.py  test_auth_routes.py  test_capture_routes.py  test_card_routes.py  test_card_templates_routes.py  test_database.py  test_dice_routes.py  test_display_routes.py  test_docs_dms_first.py  test_fast_slots_routes.py  test_file_safety.py  test_health.py  test_link_routes.py  test_links.py  test_llm_routes.py  test_map_routes.py  test_page_metadata_routes.py  test_page_routes.py  test_pages.py  test_paths.py  test_prep_health_routes.py  test_release_readiness.py  test_scenarios_routes.py  test_scripts_routes.py  test_search_routes.py  test_system_packs_routes.py  test_table_snapshots_routes.py  test_workspace_routes.py  test_world_events.py  test_world_file_management_routes.py  test_world_file_routes.py  test_world_file_save_routes.py  test_world_library_routes.py  test_world_routes.py
(+147 files in other folders)
