[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "virtualscreen-backend"
version = "0.1.0"
description = "FastAPI backend for the VirtualScreen local DM workspace."
readme = "../README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.34.0",
  "pydantic-settings>=2.7.0",
  "watchfiles>=1.0.0",
  "python-frontmatter>=1.1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0",
  "pytest>=8.3.0",
  "ruff>=0.9.0",
  "mypy>=1.13.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
